[package]
name = "ntfs_mft_reader"
version = "0.1.0"
edition = "2021"
authors = ["Robin Collins <Robin.F.Collins@outlook.com>"]
description = "A Rust application to read and parse the NTFS Master File Table (MFT) and structure the data for database storage."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Here you should include the dependencies that your project requires. For example:
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
anyhow = "1.0"
thiserror = "1.0"
# Add database client dependency according to the database you choose, for example, for SQLite:
rusqlite = { version = "0.25", features = ["bundled"] }
env_logger = "0.9"


[lib]
name = "ntfs_mft_lib"
path = "src/lib.rs"

[[bin]]
name = "ntfs_mft_reader"
path = "src/main.rs"

[features]
default = []

# Optional features can be added to enable conditional compilation of code
# Example:
# cli = []

[workspace]

# If you have multiple packages in a workspace, you can include them like this:
# members = [
#   "path/to/other/package",
# ]

# If you need to include build scripts or other configuration, you can add them here:
# [build-dependencies]
# build-script = "0.1.0"
